[gd_scene load_steps=6 format=3 uid="uid://bs1uy7g3tmkhd"]

[ext_resource type="Script" uid="uid://ccusism6amkry" path="res://character/user_interface/idle/character_card/components/labels_and_buttons/battle_command_queue_card.gd" id="1_2hakm"]
[ext_resource type="PackedScene" uid="uid://d0kdmb22ukvfg" path="res://character/user_interface/idle/character_card/components/character_data_components/character_name_label_component.tscn" id="3_3jenl"]
[ext_resource type="PackedScene" uid="uid://cdarvp7bmpj4h" path="res://character/user_interface/idle/character_card/components/labels_and_buttons/battle_command_name_label.tscn" id="4_lggsh"]
[ext_resource type="PackedScene" uid="uid://bovjmh1c28tdl" path="res://character/user_interface/idle/character_card/components/labels_and_buttons/command_priority_label.tscn" id="5_anvxj"]
[ext_resource type="PackedScene" uid="uid://cf8t55lk5hay1" path="res://character/user_interface/idle/character_card/components/labels_and_buttons/command_effective_speed_label.tscn" id="6_lggsh"]

[node name="BattleCommandQueueCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2hakm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CharacterNameLabelComponent" parent="VBoxContainer" instance=ExtResource("3_3jenl")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="BattleCommandNameLabel" parent="VBoxContainer" instance=ExtResource("4_lggsh")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="CommandPriorityLabel" parent="VBoxContainer" instance=ExtResource("5_anvxj")]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="CommandEffectiveSpeedLabel" parent="VBoxContainer" instance=ExtResource("6_lggsh")]
unique_name_in_owner = true
layout_mode = 2
